--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,16 +7,17 @@ on:
       - v*.*.*
 
 jobs:
-  deploy:
-    uses: DeterminateSystems/ci/.github/workflows/workflow.yml@main
-    permissions:
-      id-token: "write"
-      contents: "read"
-    with:
-      visibility: private
-  finish:
-    environment: production
-    needs: deploy
+  hi:
     runs-on: ubuntu-latest
     steps:
       - run: true
+        if: | ((
+              github.event_name == 'push'
+              || github.event_name == 'workflow_dispatch'
+            )
+            && github.head_ref == ''
+            && github.base_ref == ''
+            && github.event.repository.owner.name == 'DeterminateSystems'
+            && github.repository_owner == 'DeterminateSystems'
+            && github.ref_type == 'tag'
+          )
