--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,6 +15,7 @@ jobs:
           ((
               github.event_name == 'push'
               || github.event_name == 'workflow_dispatch'
+              || github.event_name == 'release'
             )
             && github.head_ref == ''
             && github.base_ref == ''
